# pool-pilot

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  Wasserrechner.py  app.py  config.toml  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yaml  post-create.sh  post-start.sh
.github/workflows/: ci.yml
.opencode/plans/: 2026-07-01-pool-water-balance-ui-redesign.md
.streamlit/: config.toml
database/: db.py  models.py  repository.py
docs/superpowers/plans/: 2026-06-30-pool-water-balance-implementation.md  2026-06-30-pool-water-balance-redesign.md  2026-07-01-daten-export-import.md  2026-07-01-default-tasks-maintenance.md  2026-07-01-pool-water-balance-ui-redesign.md  2026-07-01-separate-messung-refurbish.md  2026-07-04-default-tasks-vorlagen.md  2026-07-04-kalender-event-popup-plan.md  2026-07-04-kalender-streamlit-calendar-plan.md  2026-07-05-flexible-messwert-architektur.md
docs/superpowers/specs/: 2026-06-30-pool-water-balance-design.md  2026-06-30-pool-water-balance-redesign.md  2026-07-01-global-theme-design.md  (+7 more)
pages/: 01_Poolverwaltung.py  02_Verlauf.py  03_Wartung.py  04_Kalender.py  09_Datenverwaltung.py  1_Wasserrechner.py  2_Verlauf.py  3_Wartung.py  4_Fotos.py  99_Datenverwaltung.py
pool_calculations/: csi.py  dosing.py  lsi.py  models.py  rsi.py
tests/: test_config_loader.py  test_csi.py  test_database.py  test_dosing.py  test_export_import.py  test_lsi.py  test_repository.py  test_rsi.py
utils/: config_loader.py  export_import.py  nav.py  task_dialog.py  theme.py
(+5 files in other folders)
