[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pool-water-balance"
version = "0.1.0"
description = "Pool Water Balance Calculator"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.35",
    "sqlalchemy>=2.0",
    "plotly>=5.20",
    "pillow>=10.0",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "tomli>=2.0; python_version < '3.11'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
